--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -19,8 +19,10 @@
             android:paddingEnd="10dp"
             android:text="UIUC"
             android:textSize="40sp"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="25dp"
             />
 
         <TextView
@@ -30,20 +32,24 @@
             android:paddingBottom="20dp"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
-            android:text="@string/team2"
+            android:text="Other"
             android:textSize="40sp"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="50dp"
+            android:layout_marginTop="25dp"
             />
 
         <TextView
             android:id="@+id/score1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
             android:text="108"
-            android:textSize="36sp"
-            android:layout_toStartOf="@id/dash"
-            android:layout_alignBaseline="@id/team2"
+            android:textSize="48sp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="70dp"
+            android:layout_marginBottom="60dp"
+            android:layout_below="@id/team1"
             />
 
         <TextView
@@ -51,12 +57,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="20dp"
-            android:paddingEnd="10dp"
-            android:paddingStart="10dp"
             android:text="-"
             android:textSize="36sp"
             android:layout_centerHorizontal="true"
-            android:layout_alignBaseline="@id/team2"
+            android:layout_below="@id/team2"
             />
 
         <TextView
@@ -64,34 +68,39 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="86"
-            android:layout_toEndOf="@+id/dash"
-            android:textSize="36sp"
-            android:paddingBottom="10dp"
-            android:layout_alignBaseline="@id/team2"
+            android:textSize="48sp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="70dp"
+            android:layout_marginBottom="60dp"
+            android:layout_below="@id/team2"
             />
 
         <Button
             android:id="@+id/button"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/stats"
             android:textSize="36sp"
             android:padding="30dp"
             android:layout_alignParentStart="true"
-            android:layout_below="@id/score7"
+            android:layout_alignParentBottom="true"
             android:layout_marginTop="50dp"
+            android:layout_marginBottom="50dp"
+            android:layout_marginEnd="50dp"
             />
 
         <Button
             android:id="@+id/viewAction_button"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Actions"
             android:textSize="36sp"
             android:layout_marginTop="50dp"
             android:padding="30dp"
-            android:layout_below="@id/button"
+            android:layout_alignBaseline="@id/button"
             android:layout_alignParentEnd="true"
+            android:layout_marginBottom="50dp"
+            android:layout_marginStart="50dp"
             />
 
         <TextView
@@ -99,11 +108,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingStart="20dp"
+            android:paddingEnd="20dp"
             android:paddingBottom="20dp"
             android:text="1st"
             android:textSize="36sp"
-            android:layout_below="@id/team1"
-            android:layout_toStartOf="@id/score1"/>
+            android:layout_below="@id/score1"
+            android:layout_marginStart="50dp"
+            android:layout_alignParentStart="true"
+            />
 
         <TextView
             android:id="@+id/score3"
@@ -111,11 +123,13 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/firstQuarter"
             android:layout_alignParentStart="true"
-            android:paddingStart="10dp"
+            android:paddingStart="30dp"
             android:paddingEnd="10dp"
             android:paddingBottom="10dp"
             android:text="25"
-            android:textSize="36sp" />
+            android:textSize="36sp"
+
+            />
 
         <TextView
             android:id="@+id/dash2"
@@ -128,6 +142,7 @@
             android:layout_toEndOf="@id/score3"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
+
             />
 
         <TextView
@@ -140,7 +155,8 @@
             android:paddingEnd="10dp"
             android:paddingBottom="10dp"
             android:text="24"
-            android:textSize="36sp" />
+            android:textSize="36sp"
+            />
 
         <TextView
             android:id="@+id/secondQuarter"
@@ -149,8 +165,11 @@
             android:paddingBottom="20dp"
             android:text="2nd"
             android:textSize="36sp"
-            android:layout_below="@id/team2"
-            android:layout_toEndOf="@id/score2"/>
+            android:layout_below="@id/score2"
+            android:layout_alignParentEnd="true"
+            android:paddingEnd="20dp"
+            android:layout_marginEnd="50dp"
+            />
 
         <TextView
             android:id="@+id/score5"
@@ -161,7 +180,7 @@
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:paddingBottom="10dp"
-            android:text="20"
+            android:text="45"
             android:textSize="36sp" />
 
         <TextView
@@ -186,7 +205,7 @@
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:paddingBottom="10dp"
-            android:text="14"
+            android:text="38"
             android:textSize="36sp" />
 
         <TextView
@@ -195,9 +214,12 @@
             android:layout_height="wrap_content"
             android:text="3rd"
             android:textSize="36sp"
-            android:layout_below="@id/score3"
-            android:layout_toStartOf="@id/score1"
+            android:layout_below="@id/score4"
+            android:layout_marginStart="50dp"
+            android:paddingStart="20dp"
             android:paddingBottom="20dp"
+            android:paddingEnd="20dp"
+            android:layout_alignParentStart="true"
             />
 
         <TextView
@@ -206,10 +228,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/thirdQuarter"
             android:layout_alignParentStart="true"
-            android:paddingStart="10dp"
+            android:paddingStart="30dp"
             android:paddingEnd="10dp"
             android:paddingBottom="10dp"
-            android:text="23"
+            android:text="68"
             android:textSize="36sp" />
 
         <TextView
@@ -234,7 +256,7 @@
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:paddingBottom="10dp"
-            android:text="18"
+            android:text="56"
             android:textSize="36sp" />
 
         <TextView
@@ -245,7 +267,9 @@
             android:text="4th"
             android:textSize="36sp"
             android:layout_below="@id/score5"
-            android:layout_toEndOf="@id/score2"/>
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="50dp"
+            android:paddingEnd="20dp"/>
 
         <TextView
             android:id="@+id/score9"
@@ -256,7 +280,7 @@
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:paddingBottom="10dp"
-            android:text="40"
+            android:text="108"
             android:textSize="36sp" />
 
         <TextView
@@ -276,13 +300,12 @@
             android:id="@+id/score10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/fourthQuarter"
             android:layout_toEndOf="@+id/dash5"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:paddingBottom="10dp"
-            android:text="30"
+            android:layout_below="@id/fourthQuarter"
+            android:text="86"
             android:textSize="36sp" />
-
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
