--- a/app/src/main/res/layout/main_activity_view_games_fragment.xml
+++ b/app/src/main/res/layout/main_activity_view_games_fragment.xml
@@ -8,144 +8,150 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivityViewGamesFragment">
 
-    <LinearLayout
-        android:id="@+id/layout"
+    <ScrollView
+        android:id="@+id/scrolltab"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/game1"
+        <LinearLayout
+            android:id="@+id/layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:padding="20dp"
-            android:text="4/27 - UIUC Vs. Purdue"
-            android:textAlignment="viewStart"
-            app:layout_constraintVertical_bias="0.025"
-            android:textSize="20sp"
-            tools:layout_editor_absoluteX="0dp" />
+            android:layout_gravity="top"
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/game2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:padding="20dp"
-            android:text="4/23 - UIUC Vs. Iowa"
-            android:textAlignment="viewStart"
-            app:layout_constraintVertical_bias="0.025"
-            android:textSize="20sp"
-            tools:layout_editor_absoluteX="0dp" />
+            <Button
+                android:id="@+id/game1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:padding="20dp"
+                android:text="4/27 - UIUC Vs. Purdue"
+                android:textAlignment="viewStart"
+                android:textSize="20sp"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
 
-        <Button
-            android:id="@+id/game3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:padding="20dp"
-            android:text="4/19 - UIUC Vs. Michigan"
-            android:textAlignment="viewStart"
-            app:layout_constraintVertical_bias="0.025"
-            android:textSize="20sp"
-            tools:layout_editor_absoluteX="0dp" />
+            <Button
+                android:id="@+id/game2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:padding="20dp"
+                android:text="4/23 - UIUC Vs. Iowa"
+                android:textAlignment="viewStart"
+                android:textSize="20sp"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
 
-        <Button
-            android:id="@+id/game4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:padding="20dp"
-            android:text="4/15 - UIUC Vs. Purdue"
-            android:textAlignment="viewStart"
-            app:layout_constraintVertical_bias="0.025"
-            android:textSize="20sp"
-            tools:layout_editor_absoluteX="0dp" />
+            <Button
+                android:id="@+id/game3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:padding="20dp"
+                android:text="4/19 - UIUC Vs. Michigan"
+                android:textAlignment="viewStart"
+                android:textSize="20sp"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
 
-        <Button
-            android:id="@+id/game5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:padding="20dp"
-            android:text="4/05 - UIUC Vs. Iowa"
-            android:textAlignment="viewStart"
-            app:layout_constraintVertical_bias="0.025"
-            android:textSize="20sp"
-            tools:layout_editor_absoluteX="0dp" />
+            <Button
+                android:id="@+id/game4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:padding="20dp"
+                android:text="4/15 - UIUC Vs. Purdue"
+                android:textAlignment="viewStart"
+                android:textSize="20sp"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
 
-        <Button
-            android:id="@+id/game6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:padding="20dp"
-            android:text="3/21 - UIUC Vs. ISU"
-            android:textAlignment="viewStart"
-            app:layout_constraintVertical_bias="0.025"
-            android:textSize="20sp"
-            tools:layout_editor_absoluteX="0dp" />
+            <Button
+                android:id="@+id/game5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:padding="20dp"
+                android:text="4/05 - UIUC Vs. Iowa"
+                android:textAlignment="viewStart"
+                android:textSize="20sp"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
 
-        <Button
-            android:id="@+id/game7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:padding="20dp"
-            android:text="3/18 - UIUC Vs. Ohio"
-            android:textAlignment="viewStart"
-            app:layout_constraintVertical_bias="0.025"
-            android:textSize="20sp"
-            tools:layout_editor_absoluteX="0dp" />
+            <Button
+                android:id="@+id/game6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:padding="20dp"
+                android:text="3/21 - UIUC Vs. ISU"
+                android:textAlignment="viewStart"
+                android:textSize="20sp"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
 
-        <Button
-            android:id="@+id/game8"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:padding="20dp"
-            android:text="3/12 - UIUC Vs. Michigan"
-            android:textAlignment="viewStart"
-            app:layout_constraintVertical_bias="0.025"
-            android:textSize="20sp"
-            tools:layout_editor_absoluteX="0dp" />
+            <Button
+                android:id="@+id/game7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:padding="20dp"
+                android:text="3/18 - UIUC Vs. Ohio"
+                android:textAlignment="viewStart"
+                android:textSize="20sp"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
 
-        <Button
-            android:id="@+id/game9"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:padding="20dp"
-            android:text="3/09 - UIUC Vs. Purdue"
-            android:textAlignment="viewStart"
-            app:layout_constraintVertical_bias="0.025"
-            android:textSize="20sp"
-            tools:layout_editor_absoluteX="0dp" />
+            <Button
+                android:id="@+id/game8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:padding="20dp"
+                android:text="3/12 - UIUC Vs. Michigan"
+                android:textAlignment="viewStart"
+                android:textSize="20sp"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
 
-        <Button
-            android:id="@+id/game10"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:padding="20dp"
-            android:text="3/03 - UIUC Vs. Michigan"
-            android:textAlignment="viewStart"
-            app:layout_constraintVertical_bias="0.025"
-            android:textSize="20sp"
-            tools:layout_editor_absoluteX="0dp" />
+            <Button
+                android:id="@+id/game9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:padding="20dp"
+                android:text="3/09 - UIUC Vs. Purdue"
+                android:textAlignment="viewStart"
+                android:textSize="20sp"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
 
-        <Button
-            android:id="@+id/game11"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:padding="20dp"
-            android:text="2/26 - UIUC Vs. ISU"
-            android:textAlignment="viewStart"
-            app:layout_constraintVertical_bias="0.025"
-            android:textSize="20sp"
-            tools:layout_editor_absoluteX="0dp" />
-    </LinearLayout>
+            <Button
+                android:id="@+id/game10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:padding="20dp"
+                android:text="3/03 - UIUC Vs. Michigan"
+                android:textAlignment="viewStart"
+                android:textSize="20sp"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
+
+            <Button
+                android:id="@+id/game11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:padding="20dp"
+                android:text="2/26 - UIUC Vs. ISU"
+                android:textAlignment="viewStart"
+                android:textSize="20sp"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
+        </LinearLayout>
+    </ScrollView>
 
 </FrameLayout>
